--- a/demo/index.html
+++ b/demo/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/github-markdown-css">
     <link rel="stylesheet" href="demo.css">
-    <script src="https://cdn.jsdelivr.net/npm/flv.js/dist/flv.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/hls.js/dist/hls.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/dashjs/dist/dash.all.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/flv.js/dist/flv.min.js"></script> -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/hls.js/dist/hls.min.js"></script> -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/dashjs/dist/dash.all.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/webtorrent/latest/webtorrent.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/pearplayer"></script>
     <script src="DPlayer.js"></script>
